# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluentflet"
version = "0.1.0"
description = "Fluent Design System components for Flet"
readme = "README.md"
authors = [{ name = "Edoardo Balducci", email = "edoardoba2004@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flet>=0.24.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Bbalduzz/fluentflet"
Issues = "https://github.com/Bbalduzz/fluentflet/issues"